[project]
name = "research-gap-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
]
